# newlib

./: config.sub  configure  configure.ac
newlib/: Makefile.am  Makefile.in  configure.host
newlib/libc/ctype/: ctype_.c  ctype_.h
newlib/libc/include/: stdint.h  stdlib.h
newlib/libc/include/machine/: endian.h  ieeefp.h  setjmp.h
newlib/libc/include/sys/: config.h
newlib/libc/locale/: locale.c
newlib/libc/machine/: configure  configure.in
newlib/libc/machine/allegrex/: Makefile.am  configure.in
newlib/libc/machine/r5900/: Makefile.am  Makefile.in  configure  configure.in  mcount_internal.c  setjmp.S
newlib/libc/reent/: linkr.c  signalr.c
newlib/libc/search/: qsort.c
newlib/libc/stdlib/: __atexit.c  __call_atexit.c  nano-mallocr.c
newlib/libc/string/: memccpy.c  memchr.c  memcmp.c  memcpy.c  memmove.c  mempcpy.c  memrchr.c  memset.c  rawmemchr.c  stpcpy.c  stpncpy.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/psp/: Makefile.am  Makefile.in  configure.in  crt0.c  mlock.c
newlib/libc/sys/psp/machine/: _types.h
newlib/libc/sys/psp/sys/: dirent.h
newlib/libc/sys/r5900/: Makefile.am  Makefile.in  close.c  configure  configure.in  crt0.S  dirent.c  execve.c  fcntl.c  fork.c  fstat.c  general.c  getpid.c  gettimeofday.c  isatty.c  kill.c  link.c  lock.c  lseek.c  mkdir.c  open.c  read.c  rmdir.c  sbrk.c  stat.c  times.c  unlink.c  wait.c  write.c
newlib/libc/sys/r5900/sys/: dirent.h  lock.h
newlib/libc/syscalls/: Makefile.am  sysmkdir.c  sysrmdir.c
